//
//
//  @ Project : Untitled
//  @ File Name : TDeliveryRegular.cs
//  @ Date : 12/14/2013
//  @ Author : khoatd
//
//


namespace Supervisor.thrift.TEntity
{
	public class TDeliveryRegular 
	{
		public string _id ;
		public string _senderId ;
		public string _recipientId ;
		public string _transitStatus ;
		public string _totalCost ;
		public string _totalQuantity ;
		public string _checkoutType ;
		public string _userId ;
		public string _totalValue ;
		public string _createdDate ;
		public string _closeDate ;
	}
}
